@@ -1,3 +1,7 @@
+3/18/2004
+	- Fix NullPointerExceptions caused by bad empty Record handling.
+	  (reported by Dharmveer Jain <dharmveer_jain@yahoo.com>)
+
 3/16/2004
 	- 1.6.1 released.
 	- When loading master files with $INCLUDE statements, the included
